fixing gap

--- a/style.css
+++ b/style.css
@@ -119,3 +119,8 @@ img {
 	max-width: 100%;
 	height: auto;
 }
+
+#emptiness{
+	margin:0%;
+	
+}
